--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Bangers&display=swap");
-    @import url("https: //fonts.googleapis.com/css?family=Muli:400, 700&display=swap");
+   //@import url("https: //fonts.googleapis.com/css?family=Muli:400, 700&display=swap");
     html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, main, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -21,21 +21,31 @@
     }
 }
 
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section {
+	display: block;
+}
+*[hidden] {
+	display: none;
+}
+
 
 #page {
-    --page-min-size: 320px;
-    --page-max-width: 1280px
-
-    display:grid;
+    display:flex;
     min-height: 100vh;
-    grid-template-columns: repeat(auto-fill, minmax(var(--page-min-size), 1fr));
-    grid-gap: 1rem;
-   
+    flex-direction: column;
+    
+    header {
+        flex: 0 0 auto;
+    }
+
     main {
-      max-width: var(--page-max-width);
-      flex: 1 1 auto;
-      display: flex;
-      flex-direction: column;
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer {
+        flex: 0 0 auto;
     }
 }
 
@@ -47,9 +57,9 @@
     padding: 48px 16px 270px;
 
     &:before, &:after {
-        background: url("../../images/halftone.svg") #FF9C00;
+        background: url("/images/halftone.svg") #FF9C00;
         content: '';
-        background-size: 50% 50%;
+        background-size: 100% 100%;
         background-repeat: no-repeat;
         position: absolute;
         z-index: 1;
