--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Bangers&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Muli:400,700&display=swap");
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, main, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -107,29 +108,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       .header_logo img {
         max-width: 208px; } }
 
-.header_copy {
+.header_text {
   margin-bottom: 24px;
   text-align: center; }
   @media (min-width: 720px) {
-    .header_copy {
+    .header_text {
       margin-bottom: 104px;
       text-align: left; } }
   @media (min-width: 1024px) {
-    .header_copy {
+    .header_text {
       margin-bottom: 48px; } }
   @media (min-width: 1280px) {
-    .header_copy {
+    .header_text {
       margin-bottom: 64px; } }
-  .header_copy h1 {
+  .header_text h1 {
     font-family: 'Bangers', cursive;
     font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     font-size: 30px;
     line-height: 40px;
     letter-spacing: 0.53px; }
     @media (min-width: 720px) {
-      .header_copy h1 {
+      .header_text h1 {
         font-size: 45px;
         line-height: 57px;
         letter-spacing: 0.79px; } }
@@ -149,26 +148,158 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         margin-top: 48px; } }
   @media (min-width: 1024px) {
     .header_content {
-      width: calc(83.33333% - 58.66667px);
+      width: calc(84% - 58px);
       float: left;
       margin-left: 32px;
-      margin-left: calc(8.33333% - 34.66667px + 64px); } }
+      margin-left: calc(8% - 35px + 64px); } }
   @media (min-width: 1280px) {
     .header_content {
-      width: calc(66.66667% - 53.33333px);
+      width: calc(67% - 53px);
       float: left;
       margin-left: 32px;
-      margin-left: calc(16.66667% - 37.33333px + 64px); } }
+      margin-left: calc(17% - 37px + 64px); } }
 
 body {
   font: normal 18px/34px 'Muli', sans-serif;
   min-height: 100vh;
   scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #011931; }
+  color: #011931;
+  line-height: 1; }
   body.noscroll {
     overflow: hidden;
     height: 100vh;
     width: 100vw; }
+
+.magazine {
+  margin: -270px 16px 40px;
+  position: relative;
+  z-index: 5; }
+  @media (min-width: 720px) {
+    .magazine {
+      margin: -80px 32px 104px; } }
+  @media (min-width: 1024px) {
+    .magazine {
+      margin: -48px 32px 112px; } }
+  @media (min-width: 1280px) {
+    .magazine {
+      margin: -64px 32px 120px; } }
+
+.magazine_container {
+  max-width: 530;
+  margin: 0 auto; }
+  .magazine_container.after {
+    clear: both;
+    content: '';
+    display: block; }
+  @media (min-width: 720px) {
+    .magazine_container {
+      max-width: 672px; } }
+  @media (min-width: 1024px) {
+    .magazine_container {
+      max-width: 928px; } }
+  @media (min-width: 1280px) {
+    .magazine_container {
+      max-width: 1216px; } }
+
+.magazine_list {
+  width: calc(100% - 32px);
+  float: left;
+  margin-left: 16px;
+  position: relative; }
+  @media (min-width: 720px) {
+    .magazine_list {
+      width: calc(100% - 64px);
+      margin-left: 32px;
+      display: flex; } }
+  @media (min-width: 1024px) {
+    .magazine_list {
+      width: calc(100% - 64px);
+      margin-left: 32px; } }
+  @media (min-width: 1280px) {
+    .magazine_list {
+      width: calc(75% -56px);
+      margin-left: 32px; } }
+  @media (max-width: 719px) {
+    .magazine_list > article {
+      max-width: 320px;
+      margin: 0 auto 40px; } }
+  @media (min-width: 720px) {
+    .magazine_list > article {
+      margin-right: 32px; }
+      .magazine_list > article:last-child {
+        margin-right: 0; } }
+
+.magazine_note {
+  font: 400 25px/30px 'Bangers', cursive;
+  letter-spacing: 0.83px;
+  color: #011931;
+  position: absolute;
+  bottom: calc(100% + 10px);
+  right: 0;
+  padding-right: 52px; }
+  .magazine_note:after {
+    background: url("/images/arrow.svg") no-repeat;
+    content: '';
+    width: 21px;
+    height: 35px;
+    position: absolute;
+    transform: rotate(90deg);
+    top: -1px;
+    right: 10px;
+    z-index: 1; }
+  @media (max-width: 719px) {
+    .magazine_note {
+      display: none; } }
+  @media (min-width: 1024px) {
+    .magazine_note {
+      bottom: 115px;
+      left: 0px;
+      padding-bottom: 7px;
+      transform: rotate(270deg);
+      transform-origin: left bottom 0; }
+      .magazine_note:after {
+        left: 335px; } }
+
+.magazine_display {
+  position: relative; }
+  .magazine_display > img {
+    border: 4px solid #011931;
+    margin-bottom: 16px;
+    width: 100%;
+    height: auto; }
+  .magazine_display > button {
+    font: bold 14px/26px 'Muli', sans-serif;
+    letter-spacing: 0.78px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #F15F2E;
+    overflow: visible;
+    appearance: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+    position: static;
+    border-radius: 32px;
+    height: 52px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .magazine_display > button.hover {
+      background: #D84717; }
+    @media (min-width: 1024px) {
+      .magazine_display > button {
+        font-size: 14px;
+        line-height: 26px;
+        margin: 0 16px;
+        width: calc(100% - 32px); } }
+
+.magazine_download {
+  font: bold 14px/26px 'Muli', sans-serif;
+  display: block;
+  margin-top: 16px;
+  text-align: center;
+  letter-spacing: 0.78px;
+  text-transform: uppercase;
+  color: #011931; }
