--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Bangers&display=swap");
-   //@import url("https: //fonts.googleapis.com/css?family=Muli:400, 700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700&display=swap');
     html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, main, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -63,7 +63,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         background-repeat: no-repeat;
         position: absolute;
         z-index: 1;
-      }
+    }
     
     &:before {
         top: 50%;
@@ -81,11 +81,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         transform: translate(25%, -50%);
       }
     
-    @include swMin(Bsize){
+    @include swMin(Bsize) {
         padding: 48px 32px 80px;
     }
 
-    @include swMin(Csize){
+    @include swMin(Csize) {
         padding: 48px 32px 64px; 
     }
 }
@@ -96,19 +96,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     position: relative;
     z-index: 2;
 
-    @include swMin(Bsize){
+    @include swMin(Bsize) {
         max-width: 672px;
     }
 
-    @include swMin(Csize){
+    @include swMin(Csize) {
         max-width: 928px;
     }
 
-    @include swMin(Dsize){
+    @include swMin(Dsize) {
         max-width: 1216px;
     }
 
-    &:after{
+    &:after {
         clear: both;
         content: "";
         display:block;
@@ -126,13 +126,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         display: block;
     }
 
-    @include swMin(Bsize){
+    @include swMin(Bsize) {
         margin-left: -32px;
         margin-right: -32px;
         width: calc(100% + 64px);
     }
 
-    @include swMin(Csize){
+    @include swMin(Csize) {
         margin-left: -32px;
         margin-right: -32px;
         width: calc(100% + 64px);
@@ -146,42 +146,40 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     img {
         max-width: 120px;
 
-        @include swMin(Bsize){
+        @include swMin(Bsize) {
             max-width: 180px;
         }
-        @include swMin(Csize){
+        @include swMin(Csize) {
             max-width: 208px;
         }
     }
 }
 
-.header_copy {
+.header_text {
     margin-bottom: 24px;
     text-align: center;
 
-    @include swMin(Bsize){
+    @include swMin(Bsize) {
         margin-bottom: 104px;
         text-align: left;
     }
 
-    @include swMin(Csize){
+    @include swMin(Csize) {
         margin-bottom: 48px;
     }
 
-    @include swMin(Dsize){
+    @include swMin(Dsize) {
         margin-bottom: 64px;
     }
 
     h1 {
         font-family: 'Bangers', cursive;
 		font-weight: 400;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
 		font-size: 30px;
 		line-height: 40px;
         letter-spacing: 0.53px;
         
-        @include swMin(Bsize){
+        @include swMin(Bsize) {
             font-size: 45px;
             line-height: 57px;
             letter-spacing: 0.79px;
@@ -197,7 +195,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         margin-top: 40px;
     }
 
-    @include swMin(Bsize){
+    @include swMin(Bsize) {
         width: calc(75% - 56px);
         float: left;
         margin-left: 32px;
@@ -208,18 +206,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         }
     }
 
-    @include swMin(Csize){
-        width: calc(83.33333% - 58.66667px);
+    @include swMin(Csize) {
+        width: calc(84% - 58px);
         float: left;
         margin-left: 32px;
-        margin-left: calc(8.33333% - 34.66667px + 64px);
+        margin-left: calc(8% - 35px + 64px);
     }
 
-    @include swMin(Dsize){
-        width: calc(66.66667% - 53.33333px);
+    @include swMin(Dsize) {
+        width: calc(67% - 53px);
         float: left;
         margin-left: 32px;
-        margin-left: calc(16.66667% - 37.33333px + 64px);
+        margin-left: calc(17% - 37px + 64px);
     }
 }
 
@@ -228,10 +226,8 @@ body {
     font: normal 18px/34px 'Muli', sans-serif;
     min-height: 100vh;
     scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     color: #011931;
+    line-height: 1;
   
     &.noscroll {
       overflow: hidden;
@@ -240,5 +236,174 @@ body {
     }
 }
 
+.magazine {
+    margin: -270px 16px 40px;
+    position: relative;
+    z-index: 5;
 
+    @include swMin(Bsize) {
+        margin: -80px 32px 104px;
+    }
 
+    @include swMin(Csize) {
+        margin: -48px 32px 112px;
+    }
+
+    @include swMin(Dsize) {
+        margin: -64px 32px 120px;
+    }
+}
+
+.magazine_container {
+    max-width: 530;
+    margin: 0 auto;
+
+    &.after {
+        clear:both;
+        content:'';
+        display:block;
+    }
+    
+    @include swMin(Bsize) {
+        max-width: 672px;
+    }
+
+    @include swMin(Csize) {
+        max-width: 928px;
+    }
+
+    @include swMin(Dsize) {
+        max-width: 1216px;
+    }
+}
+
+.magazine_list {
+    width: calc(100% - 32px);
+    float: left;
+    margin-left: 16px;
+    position: relative;
+
+    @include swMin(Bsize) {
+        width: calc(100% - 64px);
+        margin-left: 32px;
+        display: flex;
+    }
+
+    @include swMin(Csize) {
+        width: calc(100% - 64px);
+        margin-left: 32px;
+    }
+
+    @include swMin(Dsize) {
+        width: calc(75% -56px);
+        margin-left: 32px;
+    }
+
+    > article {
+        @media(max-width: 719px) {
+            max-width: 320px;
+            margin: 0 auto 40px;
+        }
+
+        @include swMin(Bsize) {
+            margin-right: 32px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+.magazine_note {
+    font: 400 25px/30px 'Bangers', cursive;
+    letter-spacing: 0.83px;
+    color: #011931;
+    position: absolute;
+    bottom: calc(100% + 10px);
+    right: 0;
+    padding-right: 52px;
+
+    &:after {
+        background: url("/images/arrow.svg") no-repeat;
+        content:'';
+        width: 21px;
+        height: 35px;
+        position: absolute;
+        transform: rotate(90deg);
+        top: -1px;
+        right: 10px;
+        z-index: 1;
+    }
+
+    @media(max-width: 719px) {
+        display: none;
+    }
+
+    @include swMin(Csize) {
+        bottom: 115px;
+        left: 0px;
+        padding-bottom: 7px;
+        transform: rotate(270deg);
+        transform-origin: left bottom 0;
+
+        &:after {
+            left: 335px;
+        }
+    }
+}
+
+.magazine_display {
+    position: relative;
+    > {
+        img {
+            border: 4px solid #011931;
+            margin-bottom: 16px;
+            width: 100%;
+            height: auto;
+        }
+
+        button {
+            font: bold 14px/26px 'Muli', sans-serif;
+            letter-spacing: 0.78px;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            background: #F15F2E;
+            overflow: visible;
+            appearance: none;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 0;
+            position: static;
+            border-radius: 32px;
+            height: 52px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &.hover {
+                background: #D84717;
+            }
+
+            @include swMin(Csize) {
+                font-size: 14px;
+                line-height: 26px;
+                margin: 0 16px;
+                width: calc(100% - 32px);
+            }
+
+        }
+    }   
+}
+
+.magazine_download {
+    font: bold 14px/26px 'Muli', sans-serif;
+    display: block;
+    margin-top: 16px;
+    text-align: center;
+    letter-spacing: 0.78px;
+    text-transform: uppercase;
+    color: #011931;
+}
