--- a/app/css/main.css
+++ b/app/css/main.css
@@ -214,15 +214,19 @@ body {
   @media (min-width: 1024px) {
     .magazine_list {
       width: calc(100% - 64px);
-      margin-left: 32px; } }
+      margin-left: 32px;
+      display: flex; } }
   @media (min-width: 1280px) {
     .magazine_list {
       width: calc(75% -56px);
-      margin-left: 32px; } }
+      margin-left: 32px;
+      display: flex; } }
   @media (max-width: 719px) {
     .magazine_list > article {
       max-width: 320px;
-      margin: 0 auto 40px; } }
+      margin: 0 auto 40px; }
+      .magazine_list > article:last-child {
+        margin-bottom: 0; } }
   @media (min-width: 720px) {
     .magazine_list > article {
       margin-right: 32px; }
@@ -274,7 +278,6 @@ body {
     color: #FFFFFF;
     background: #F15F2E;
     overflow: visible;
-    appearance: none;
     border: none;
     outline: none;
     cursor: pointer;
@@ -288,12 +291,17 @@ body {
     justify-content: center; }
     .magazine_display > button.hover {
       background: #D84717; }
+    .magazine_display > button > img {
+      display: none; }
     @media (min-width: 1024px) {
       .magazine_display > button {
         font-size: 14px;
         line-height: 26px;
         margin: 0 16px;
-        width: calc(100% - 32px); } }
+        width: calc(100% - 32px); }
+        .magazine_display > button > img {
+          display: initial;
+          margin-right: 7px; } }
 
 .magazine_download {
   font: bold 14px/26px 'Muli', sans-serif;
@@ -303,3 +311,69 @@ body {
   letter-spacing: 0.78px;
   text-transform: uppercase;
   color: #011931; }
+
+.details {
+  margin-bottom: 40px; }
+  @media (min-width: 720px) {
+    .details {
+      margin-bottom: 56px; } }
+  @media (min-width: 1024px) {
+    .details {
+      margin-bottom: 96px; } }
+
+.details_container {
+  width: 100%;
+  max-width: 1216px;
+  margin: 0 auto; }
+  .details_container:after {
+    clear: both;
+    content: '';
+    display: block; }
+
+.details_image {
+  width: calc(100% - 32px);
+  float: left;
+  margin-left: 16px; }
+  @media (min-width: 720px) {
+    .details_image {
+      width: calc(75% - 56px);
+      margin-left: 32px; } }
+  @media (min-width: 1024px) {
+    .details_image {
+      width: calc(40% - 45px);
+      margin-left: 32px; } }
+  @media (min-width: 1280px) {
+    .details_image {
+      width: calc(33% - 42px);
+      margin-left: 32px; } }
+  .details_image > img {
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto 32px;
+    border: solid 4px #011931; }
+
+.details_text {
+  width: calc(100% - 32px);
+  margin-left: 16px;
+  float: left; }
+  .details_text p {
+    font: normal 18px/34px 'Muli', sans-serif; }
+  .details_text a {
+    font: bold 'Muli', sans-serif;
+    color: #F15F2E; }
+    .details_text a:hover {
+      color: #D84717; }
+  .details_text > * + * {
+    margin-top: 15px; }
+  @media (min-width: 720px) {
+    .details_text {
+      width: calc(75% - 56px);
+      margin-left: 32px; } }
+  @media (min-width: 1024px) {
+    .details_text {
+      width: calc(58% - 50px);
+      margin-left: 32px; } }
+  @media (min-width: 1280px) {
+    .details_text {
+      width: calc(50% - 48px);
+      margin-left: 32px; } }
