--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,5 @@
+@import 'header' , 'magazine' , 'bodyDetails' , 'footer';
+
 @import url("https://fonts.googleapis.com/css?family=Bangers&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Muli:400,700&display=swap');
     html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, main, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -7,18 +9,6 @@
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-}
-
-@mixin swMin($size) {
-    @if $size == Bsize {
-        @media (min-width: 720px) { @content; }
-    }
-    @else if $size == Csize {
-        @media (min-width: 1024px) { @content; }
-    }
-    @else if $size == Dsize {
-        @media (min-width: 1280px) { @content; }
-    }
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section {
@@ -50,178 +40,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 
-.header {
-    background-color: #FF9C00;
-    position: relative;
-    overflow: hidden;
-    padding: 48px 16px 270px;
-
-    &:before, &:after {
-        background: url("/images/halftone.svg") #FF9C00;
-        content: '';
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        position: absolute;
-        z-index: 1;
-    }
-    
-    &:before {
-        top: 50%;
-        left: 0;
-        height: 750px;
-        width: 750px;
-        transform: translate(-50%, -50%);
-    }
-
-    &:after {
-        top: 0;
-        right: 0;
-        height: 750px;
-        width: 750px;
-        transform: translate(25%, -50%);
-      }
-    
-    @include swMin(Bsize) {
-        padding: 48px 32px 80px;
-    }
-
-    @include swMin(Csize) {
-        padding: 48px 32px 64px; 
-    }
-}
-
-.header_container {
-    max-width: 530px;
-    margin: 0 auto;
-    position: relative;
-    z-index: 2;
-
-    @include swMin(Bsize) {
-        max-width: 672px;
-    }
-
-    @include swMin(Csize) {
-        max-width: 928px;
-    }
-
-    @include swMin(Dsize) {
-        max-width: 1216px;
-    }
-
-    &:after {
-        clear: both;
-        content: "";
-        display:block;
-    }
-}
-
-.header_container-inner {
-    margin-left: -16px;
-    margin-right: -16px;
-    width: calc(100% + 32px);
-
-    &::after {
-        clear: both;
-        content: "";
-        display: block;
-    }
-
-    @include swMin(Bsize) {
-        margin-left: -32px;
-        margin-right: -32px;
-        width: calc(100% + 64px);
-    }
-
-    @include swMin(Csize) {
-        margin-left: -32px;
-        margin-right: -32px;
-        width: calc(100% + 64px);
-    }
-}
-
-.header_logo {
-    display: flex;
-    justify-content: center;
-
-    img {
-        max-width: 120px;
-
-        @include swMin(Bsize) {
-            max-width: 180px;
-        }
-        @include swMin(Csize) {
-            max-width: 208px;
-        }
-    }
-}
-
-.header_text {
-    margin-bottom: 24px;
-    text-align: center;
-
-    @include swMin(Bsize) {
-        margin-bottom: 104px;
-        text-align: left;
-    }
-
-    @include swMin(Csize) {
-        margin-bottom: 48px;
-    }
-
-    @include swMin(Dsize) {
-        margin-bottom: 64px;
-    }
-
-    h1 {
-        font-family: 'Bangers', cursive;
-		font-weight: 400;
-		font-size: 30px;
-		line-height: 40px;
-        letter-spacing: 0.53px;
-        
-        @include swMin(Bsize) {
-            font-size: 45px;
-            line-height: 57px;
-            letter-spacing: 0.79px;
-        }
-    }
-}
-
-.header_content {
-    width: calc(100% - 32px);
-    margin-left: 16px;
-  
-    > * + * {
-        margin-top: 40px;
-    }
-
-    @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        float: left;
-        margin-left: 32px;
-        margin-left: calc(12.5% - 36px + 64px);
-
-        > * + * {
-            margin-top: 48px;
-        }
-    }
-
-    @include swMin(Csize) {
-        width: calc(84% - 58px);
-        float: left;
-        margin-left: 32px;
-        margin-left: calc(8% - 35px + 64px);
-    }
-
-    @include swMin(Dsize) {
-        width: calc(67% - 53px);
-        float: left;
-        margin-left: 32px;
-        margin-left: calc(17% - 37px + 64px);
-    }
-}
-
-
 body {
     font: normal 18px/34px 'Muli', sans-serif;
     min-height: 100vh;
@@ -236,6 +54,7 @@ body {
     }
 }
 
+//magazine -> magazine_container -> magazine_list
 .magazine {
     margin: -270px 16px 40px;
     position: relative;
@@ -252,268 +71,74 @@ body {
     @include swMin(Dsize) {
         margin: -64px 32px 120px;
     }
-}
 
-.magazine_container {
-    max-width: 530;
-    margin: 0 auto;
+    &_container {
+        max-width: 530;
+        margin: 0 auto;
 
-    &.after {
-        clear:both;
-        content:'';
-        display:block;
-    }
-    
-    @include swMin(Bsize) {
-        max-width: 672px;
-    }
-
-    @include swMin(Csize) {
-        max-width: 928px;
-    }
-
-    @include swMin(Dsize) {
-        max-width: 1216px;
-    }
-}
-
-.magazine_list {
-    width: calc(100% - 32px);
-    float: left;
-    margin-left: 16px;
-    position: relative;
-
-    @include swMin(Bsize) {
-        width: calc(100% - 64px);
-        margin-left: 32px;
-        display: flex;
-    }
-
-    @include swMin(Csize) {
-        width: calc(100% - 64px);
-        margin-left: 32px;
-        display: flex;
-    }
-
-    @include swMin(Dsize) {
-        width: calc(75% -56px);
-        margin-left: 32px;
-        display: flex;
-    }
-
-    > article {
-        @media(max-width: 719px) {
-            max-width: 320px;
-            margin: 0 auto 40px;
-            
-            &:last-child {
-                margin-bottom: 0;
-            }
+        &.after {
+            clear:both;
+            content:'';
+            display:block;
         }
+        
+        @include swMin(Bsize) {
+            max-width: 672px;
+        }
+
+        @include swMin(Csize) {
+            max-width: 928px;
+        }
+
+        @include swMin(Dsize) {
+            max-width: 1216px;
+        }
+    }
+
+    &_list {
+        width: calc(100% - 32px);
+        float: left;
+        margin-left: 16px;
+        position: relative;
 
         @include swMin(Bsize) {
-            margin-right: 32px;
-
-            &:last-child {
-                margin-right: 0;
-            }
-        }
-    }
-}
-
-.magazine_note {
-    font: 400 25px/30px 'Bangers', cursive;
-    letter-spacing: 0.83px;
-    color: #011931;
-    position: absolute;
-    bottom: calc(100% + 10px);
-    right: 0;
-    padding-right: 52px;
-
-    &:after {
-        background: url("/images/arrow.svg") no-repeat;
-        content:'';
-        width: 21px;
-        height: 35px;
-        position: absolute;
-        transform: rotate(90deg);
-        top: -1px;
-        right: 10px;
-        z-index: 1;
-    }
-
-    @media(max-width: 719px) {
-        display: none;
-    }
-
-    @include swMin(Csize) {
-        bottom: 115px;
-        left: 0px;
-        padding-bottom: 7px;
-        transform: rotate(270deg);
-        transform-origin: left bottom 0;
-
-        &:after {
-            left: 335px;
-        }
-    }
-}
-
-.magazine_display {
-    position: relative;
-    > {
-        img {
-            border: 4px solid #011931;
-            margin-bottom: 16px;
-            width: 100%;
-            height: auto;
-        }
-
-        button {
-            font: bold 14px/26px 'Muli', sans-serif;
-            letter-spacing: 0.78px;
-            text-transform: uppercase;
-            color: #FFFFFF;
-            background: #F15F2E;
-            overflow: visible;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            padding: 0;
-            position: static;
-            border-radius: 32px;
-            height: 52px;
-            width: 100%;
+            width: calc(100% - 64px);
+            margin-left: 32px;
             display: flex;
-            align-items: center;
-            justify-content: center;
+        }
 
-            &.hover {
-                background: #D84717;
-            }
+        @include swMin(Csize) {
+            width: calc(100% - 64px);
+            margin-left: 32px;
+            display: flex;
+        }
 
-            > img {
-                display: none;
-            }
+        @include swMin(Dsize) {
+            width: calc(75% -56px);
+            margin-left: 32px;
+            display: flex;
+        }
 
-            @include swMin(Csize) {
-                font-size: 14px;
-                line-height: 26px;
-                margin: 0 16px;
-                width: calc(100% - 32px);
-
-                > img {
-                    display: initial;
-                    margin-right: 7px;
+        > article {
+            @media(max-width: 719px) {
+                max-width: 320px;
+                margin: 0 auto 40px;
+                
+                &:last-child {
+                    margin-bottom: 0;
                 }
             }
 
-        }
-    }   
-}
+            @include swMin(Bsize) {
+                margin-right: 32px;
 
-.magazine_download {
-    font: bold 14px/26px 'Muli', sans-serif;
-    display: block;
-    margin-top: 16px;
-    text-align: center;
-    letter-spacing: 0.78px;
-    text-transform: uppercase;
-    color: #011931;
-}
-
-.details {
-    margin-bottom: 40px;
-
-    @include swMin(Bsize) {
-        margin-bottom: 56px;
-    }
-
-    @include swMin(Csize) {
-        margin-bottom: 96px;
-    }
-}
-
-.details_container {
-    width: 100%;
-    max-width: 1216px;
-    margin: 0 auto;
-
-    &:after {
-        clear: both;
-        content:'';
-        display: block;
-    }
-}
-
-.details_image {
-    width: calc(100% - 32px);
-    float: left;
-    margin-left: 16px;
-
-    @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        margin-left: 32px;
-    }
-
-    @include swMin(Csize) {
-        width: calc(40% - 45px);
-        margin-left: 32px;
-    }
-
-    @include swMin(Dsize) {
-        width: calc(33% - 42px);
-        margin-left: 32px;
-    }
-
-    > img {
-        width: 100%;
-        max-width: 320px;
-        margin: 0 auto 32px;
-        border: solid 4px #011931;
-
-        @include swMin(Cize) {
-            max-width: 384px;
-            margin-bottom: 0;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
         }
     }
 }
 
-.details_text {
-    width: calc(100% - 32px);
-    margin-left: 16px;
-    float: left;
 
-    p {
-        font: normal 18px/34px 'Muli', sans-serif;
-    }
 
-    a {
-        font: bold 'Muli', sans-serif;
-        color: #F15F2E;
-
-        &:hover {
-            color: #D84717;
-        }
-    }
-
-    > * + * {
-        margin-top: 15px;
-    }
-
-    @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        margin-left: 32px;
-    }
-
-    @include swMin(Csize) {
-        width: calc(58% - 50px);
-        margin-left: 32px;
-    }
-
-    @include swMin(Dsize) {
-        width: calc(50% - 48px);
-        margin-left: 32px;
-    }
-
-}
