--- a/app/scss/bodyDetails.scss
+++ b/app/scss/bodyDetails.scss
@@ -1,6 +1,7 @@
 @import 'media';
 
 .details {
+    position: relative;
     margin-bottom: 40px;
 
     @include swMin(Bsize) {
@@ -14,52 +15,48 @@
 
 .details_container {
     width: 100%;
-    max-width: 1216px;
     margin: 0 auto;
+    
+    @include swMin(Bsize) {
+        width: 495px;
+        margin-top: 104px;
+    }
 
-    &:after {
-        clear: both;
-        content:'';
-        display: block;
+    @include swMin(Csize) {
+        width: 928px;
+        margin-top: 116px;
+        display: flex;
+    }
+
+    @include swMin(Dsize) {
+        width: 1003px;
+        margin-top: 116px;
     }
 }
 
 .details_image {
-    width: calc(100% - 32px);
-    float: left;
-    margin-left: 16px;
+    width: 288px;
+    margin: auto;
 
     > img {
         width: 100%;
         max-width: 384px;
-        margin: 0 auto 32px;
         border: solid 4px #011931;
-        display: block;
+        margin-bottom: 32px;
     }
 
     @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        margin-left: 32px;
+        width: 336px;
     }
-
-    @include swMin(Csize) {
-        width: calc(40% - 45px);
-        margin-left: 32px;
-    }
-
-    @include swMin(Dsize) {
-        width: calc(33% - 42px);
-        margin-left: 32px;
-    }  
 }
 
 .details_text {
-    width: calc(100% - 32px);
-    margin-left: 16px;
-    float: left;
-
+    width: 288px;
+    margin: 0 auto;
+    
     p {
         font: normal 18px/34px 'Muli', sans-serif;
+        color: #011931;
     }
 
     a {
@@ -77,17 +74,15 @@
     }
 
     @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        margin-left: 32px;
+        width: 495px;
     }
 
     @include swMin(Csize) {
-        width: calc(58% - 50px);
         margin-left: 32px;
+        width: 528px;
     }
 
     @include swMin(Dsize) {
-        width: calc(50% - 48px);
-        margin-left: 32px;
+        width: 591px;
     }
 }
