--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -4,12 +4,13 @@
     background-color: #FF9C00;
     position: relative;
     overflow: hidden;
-    padding: 48px 16px 270px;
+    padding-top: 47px;
+    height: 737px;
 
     &:before, &:after {
         background: url("/images/halftone.svg") #FF9C00;
         content: '';
-        background-size: 100% 100%;
+        background-size: 100% 100%; 
         background-repeat: no-repeat;
         position: absolute;
         z-index: 1;
@@ -29,92 +30,35 @@
         height: 750px;
         width: 750px;
         transform: translate(25%, -50%);
-      }
-    
-    @include swMin(Bsize) {
-        padding: 48px 32px 80px;
     }
 
     @include swMin(Csize) {
-        padding: 48px 32px 64px; 
+        height: 577px;
     }
 }
 
 .header_container {
-    max-width: 530px;
-    margin: 0 auto;
+    max-width: 288px;
+    margin: auto auto;
     position: relative;
     z-index: 2;
 
     @include swMin(Bsize) {
-        max-width: 672px;
+        max-width: 720px;
     }
 
     @include swMin(Csize) {
-        max-width: 928px;
+        max-width: 1024px;
     }
 
     @include swMin(Dsize) {
-        max-width: 1216px;
+        max-width: 1280px;
     }
 
     &:after {
         clear: both;
         content: "";
         display:block;
-    }
-}
-
-.header_container-inner {
-    margin-left: -16px;
-    margin-right: -16px;
-    width: calc(100% + 32px);
-
-    &::after {
-        clear: both;
-        content: "";
-        display: block;
-    }
-
-    @include swMin(Bsize) {
-        margin-left: -32px;
-        margin-right: -32px;
-        width: calc(100% + 64px);
-    }
-
-    @include swMin(Csize) {
-        margin-left: -32px;
-        margin-right: -32px;
-        width: calc(100% + 64px);
-    }
-}
-
-.header_content {
-    width: calc(100% - 32px);
-    margin-left: 16px;
-    float: left;
-
-    > * + *{
-        margin-top: 40px;
-    }
-
-    @include swMin(Bsize) {
-        width: calc(75% - 56px);
-        margin-left: 95px;
-
-        > * + * {
-            margin-top: 48px;
-        }
-    }
-
-    @include swMin(Csize) {
-        width: calc(84% - 58px);
-        margin-left: 105px;
-    }
-
-    @include swMin(Dsize) {
-        width: calc(67% - 53px);
-        margin-left: 230px;
     }
 }
 
@@ -126,37 +70,40 @@
         max-width: 120px;
 
         @include swMin(Bsize) {
-            max-width: 180px;
+            max-width: 190px;
         }
         @include swMin(Csize) {
-            max-width: 208px;
+            max-width: 210px;
         }
     }
 }
 
 .header_text {
-    margin-bottom: 24px;
-    text-align: center;
+    margin: 48px auto;
+    text-align: left;
 
     @include swMin(Bsize) {
-        margin-bottom: 104px;
-        text-align: left;
+        width: 496px;
+        margin-top: 60px;
     }
 
     @include swMin(Csize) {
-        margin-bottom: 48px;
+        width: 769px;
+        margin-top: 61px;
     }
 
     @include swMin(Dsize) {
-        margin-bottom: 64px;
+        width: 801px;
+        margin-top: 61px;
     }
 
     h1 {
         font-family: 'Bangers', cursive;
+        color: #011931;
 		font-weight: 400;
 		font-size: 30px;
 		line-height: 40px;
-        letter-spacing: 0.53px;
+        letter-spacing: 0.52px;
         
         @include swMin(Bsize) {
             font-size: 45px;
